# ai-researcher-proto

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
.cursor/docs/: architecture.md
.cursor/rules/: aira-rule.mdc
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile.worker  README.md  alembic.ini  eval_qa.sh  fly.grobid.toml  fly.worker.toml  langgraph.json  langgraph.sh  myplayground.py  pyproject.toml  run_pipeline.sh  simple_load.py  test_semantic_search.py  test_tools_directly.py  worker.sh
backend/alembic/versions/: 375c3cdd70b8_add_search_vector_column_for_full_text_.py  40ee3934cf27_initial_migration_create_papers_table.py  add_embedding_vector_column.py
backend/app/: auth.py  celery_app.py  data_pipeline.py
backend/app/agent/: RedisDocumentStore.py  __init__.py  graph.py  orchestrator.py  paper_finder.py  paper_finder_fast.py  prompts.py  qa.py  qa_baseline.py  states.py  supervisor.py  ui_manager.py  ui_types.py  utils.py
backend/app/core/: config.py  logging_config.py  schema.py
backend/app/db/: init_db.py  models.py  schema.py  session.py
backend/app/services/: elasticsearch.py  embedding.py  paper_loader.py  qdrant.py  s2_client.py
backend/app/tasks/: ingest.py
backend/app/tools/: __init__.py  search.py
backend/app/webapp/: app.py
backend/eval/: EVALUATION_REPORT.md  README.md  asta_benchmark.py  astabench_integration.py  beir_matched_evaluation.py  beir_retrieval_benchmark.py  build_id_mapping.py  eval_paper_finder.py  eval_qa_agent.py  eval_qasper.py  extract_matched_papers.py  load_qasper.py  monitor_eval.py
backend/eval/results/: BENCHMARK_REPORT.md  asta_benchmark_results.json  beir_matched_results.json
backend/scripts/: paper_crawler.py
backend/tests/: conftest.py  test_ingest_endpoints.py
backend/tests/agent/: test_optimize_for_qa.py  test_optimize_for_search.py  test_planner.py  test_qa_graph.py  test_replanner.py
web/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.tsx  main.tsx
web/src/components/agent/: ui.test.tsx  ui.tsx
web/src/components/icons/: corvus.tsx
web/src/components/thread/: index.tsx
web/src/components/thread/history/: index.tsx
web/src/components/thread/messages/: ai.tsx  select-papers-interrupt.tsx
web/src/components/thread/selected-papers-panel/: index.tsx  paper-card.tsx
web/src/providers/: PaperSelection.tsx  Stream.tsx  Thread.tsx
web/src/test/: setup.ts
