[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.116.1",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.4.27",
    "pip-system-certs>=5.2",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "pydantic-settings>=2.10.1",
    "grobid-client-python>=0.0.17",
    "langchain-community>=0.3.29",
    "bs4>=0.0.2",
    "lxml>=5.0.0",
    "asyncpg>=0.30.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.0",
]
