[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.116.1",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.4.27",
    "pip-system-certs>=5.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.10.1",
    "grobid-client-python>=0.0.17",
    "langchain-community>=0.3.29",
    "bs4>=0.0.2",
    "lxml>=5.0.0",
    "sentence-transformers>=5.1.0",
    "langchain-qdrant>=0.2.1",
    "langchain-huggingface>=0.3.1",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.36.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "langchain-deepseek>=0.1.0",
    "numpy>=1.26.0",
    "langchain-google-genai>=4.0.0",
    "semanticscholar>=0.8.0",
    "rerankers>=0.10.0",
    "langchain-tavily>=0.2.17",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pypdf>=6.7.0",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
